# gamedoodle

./: .gitignore  LICENSE  README.md  gamedoodle.service  manage.py  pyproject.toml  requirements.in  requirements.txt
gamedoodle/: asgi.py  settings.py  urls.py  wsgi.py
gamedoodle/core/: admin.py  apps.py  mailing.py  models.py  views.py
gamedoodle/core/management/commands/: fetch_all_steam_games.py  send_email_notifications.py
gamedoodle/core/migrations/: 0001_initial.py  0001_squashed_0010_auto_20201004_1718.py  0002_auto_20200927_1255.py  0002_game_is_free.py  0003_event_read_only.py  0003_event_uuid.py  0004_auto_20200927_1551.py  0004_make_event_date_optional.py  0005_auto_20201001_2133.py  0005_event_details.py  0006_allow_leaving_event_details_blank_in_admin.py  0006_auto_20201004_1548.py  0007_event_listed.py  0007_game_image_url.py  0008_game_store_url.py  0008_vote_is_superlike.py  0009_auto_20201004_1631.py  0009_eventsubscription.py  0010_auto_20201004_1718.py  0010_eventsubscription_uuid.py  0011_sentmail.py  0012_auto_20221024_1839.py  0013_comment_softdeleted.py  0014_track_who_added_a_game_to_an_event.py  0015_alter_comment_game.py
gamedoodle/core/templates/core/: base.html  event_add_comment.html  event_add_comment_content.html  event_add_game.html  event_detail.html  event_detail_content.html  event_list.html  event_setup_email_notifications.html  who_are_you.html
