[project]
name = "gamedoodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.4.0",
    "django==4.2",
    "django-easy-audit>=1.3.6",
    "django-htmx>=1.27.0",
    "gunicorn>=26.0.0",
    "python-decouple>=3.8",
    "requests>=2.34.2",
    "sentry-sdk[django]>=2.62.0",
    "whitenoise>=6.12.0",
]
